--- a/about.Rmd
+++ b/about.Rmd
@@ -9,11 +9,10 @@ output:
 
 1.  J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/)  (2023)
 <br>
-[Discovering plausible direct causes of a target variable](https://arxiv.org/abs/2112.10858)  
+[Structural restrictions in local causal discovery: identifying direct causes of a target variable](paper5.pdf)  
 <button id="toggleButton5" class="custom-button">&#9654; **Abstract**: We consider the problem of learning a set of direct causes of a target...</button>
 <div id="longText5" style="display: none;">
-**Abstract**: We consider the problem of learning a set of direct causes of a target variable from an observational joint distribution. Learning causal   directed acyclic graphs (DAGs) is a fundamental problem in science. Several results are known when the full DAG is identifiable from the distribution, such as assuming a nonlinear Gaussian data-generating process. We show conditions under which the set of direct causes is identifiable from the distribution under essentially no assumptions on the data-generating process of the variables other than the target variable. This framework can be beneficial when we are not interested in the full DAG but only in local causal relations around the target variable. It can be an interesting complement to conditional-independence-based methods for orienting some edges in partially oriented graphs. 
-We provide two practical algorithms for estimating the direct causes from a finite random sample and show their effectiveness on several benchmark data-sets. 
+**Abstract**: We consider the problem of learning a set of direct causes of a target variable from an observational joint distribution. Learning directed acyclic graphs (DAGs) that represent the causal structure is a fundamental problem in science. Several results are known when the full DAG is identifiable from the distribution, such as assuming a nonlinear Gaussian data-generating process. Often, we are only interested in identifying the direct causes of one target variable (local causal structure), not the full DAG. In this paper, we discuss different assumptions for the data-generating process of the target variable under which the set of direct causes is identifiable from the distribution. While doing so, we put essentially no assumptions on the variables other than the target variable. In addition to the novel identifiability results, we provide two practical algorithms for estimating the direct causes from a finite random sample and show their effectiveness on several benchmark data-sets. We apply this framework to learn direct causes of the reduction in the fertility rate in different countries.  
 </div>
 <br>
 
@@ -67,15 +66,15 @@ It has been shown that the causal graph is identifiable under different models, 
 
 - [CUSO: statistics and applied probability](https://statistique.cuso.ch/historique-des-ecoles) (Participant in  **Les Diablerets**, Switzerland, 5.2.2023-8.2.2023, 4.9.2022-7.9.2022, 6.2.2022-9.2.2022, 12.9.2021-15.9.2021) 
 
-- [BIRS: Combining Causal Inference and Extreme Value Theory in the Study of Climate Extremes and their Causes ](http://www.birs.ca/events/2022/5-day-workshops/22w5079) (Presented via Zoom, **Kelowna**,  26.6.2022-1.7.2022) 
+- [BIRS: Combining Causal Inference and Extreme Value Theory in the Study of Climate Extremes and their Causes ](http://www.birs.ca/events/2022/5-day-workshops/22w5079) (Presented via Zoom, **Kelowna**, Canada,  26.6.2022-1.7.2022) 
 
 - [Robust](https://www.czso.cz/documents/10180/167607761/32019722q4_471-472_vozar_information.pdf/82abef69-b6ca-4fdd-aa21-0201f139b8a2?version=1.1) (Presented in **Prague**, Czech republic, 12.6.2022-17.6.2022) 
 
-- [CMStatistics](http://www.cmstatistics.org/RegistrationsV2/CMStatistics2021/viewSubmission.php?in=251&token=p12r7623o22q1oo2p4qrnq17n2s36r1o) (Presented via Zoom, **London**, 18.12.2021 - 20.12.2021)
+- [CMStatistics](http://www.cmstatistics.org/RegistrationsV2/CMStatistics2021/viewSubmission.php?in=251&token=p12r7623o22q1oo2p4qrnq17n2s36r1o) (Presented via Zoom, **London**, UK, 18.12.2021 - 20.12.2021)
 
 - [Valpred workshop](http://wintenberger.fr/VALPRED) (Presented in **Aussois**, France, 4.10.2021-7.10.2021) 
 
-- [EVA: Extreme value analysys](https://www.maths.ed.ac.uk/school-of-mathematics/eva-2021) (Presented via Zoom, **Edinburgh**,  5.6.2021-9.6.2021) 
+- [EVA: Extreme value analysys](https://www.maths.ed.ac.uk/school-of-mathematics/eva-2021) (Presented via Zoom, **Edinburgh**, UK,  5.6.2021-9.6.2021) 
 
 
 
