--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ output:
   </div>
   <div class="col-md-9">
 
-My nickname is Juro (pronounced like €), and I am a Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne](https://www.unil.ch/hec/en/home.html), Switzerland. I am passionate about mathematical statistics and specialize in the field of causal inference. Through my research and work, I strive to uncover the hidden relationships and causal effects that shape our world.
+My nickname is Juro (pronounced like €), and I am a Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne, Switzerland](https://www.unil.ch/hec/en/home.html). I am passionate about mathematical statistics and specialize in the field of causal inference. Through my research and work, I strive to uncover the hidden relationships and causal effects that shape our world.
 
 Currently, my research emphasis lies in [causal discovery](https://towardsdatascience.com/causal-discovery-6858f9af6dcb#:~:text=Causal%20discovery%20aims%20to%20infer,causal%20model%20that%20describes%20it.), focusing on the identifiability of causal relations from observational data. In some of our recent publications, we also combine causal discovery with [Extreme value theory](https://en.wikipedia.org/wiki/Extreme_value_theory) and [time series analysis](https://en.wikipedia.org/wiki/Granger_causality). 
 
@@ -35,8 +35,7 @@ I was born in Slovakia and did my bachelor's and master's in pure mathematics at
 # Latest news
 - **I am currently looking for an internship at a research group working on causality. If you know about something please let me know.** 
 
-- New paper about [Discovering plausible direct causes of a target variable](https://arxiv.org/abs/2112.10858) is available on arXiv!  
+- New paper [Structural restrictions in local causal discovery: identifying direct causes of a target variable](https://arxiv.org/abs/2307.16048) is available online!  
 
 
-- New paper about [Identifiability of causal graphs under nonadditive conditionally parametric causal models](https://arxiv.org/abs/2303.15376) is submitted into JRSSb journal. Wish us luck!
 
