--- a/about.Rmd
+++ b/about.Rmd
@@ -7,48 +7,51 @@ output:
 
 <font size="12">Publications and Preprints</font>
 
-1.  J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/)  (2023)
+1.  J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/)  (2023, preprint)
 <br>
-[Structural restrictions in local causal discovery: identifying direct causes of a target variable](https://arxiv.org/abs/2307.16048)  
+[Structural restrictions in local causal discovery: identifying direct causes of a target variable](https://arxiv.org/abs/2307.16048) 
 <button id="toggleButton5" class="custom-button">&#9654; **Abstract**: We consider the problem of learning a set of direct causes of a target...</button>
 <div id="longText5" style="display: none;">
 **Abstract**: We consider the problem of learning a set of direct causes of a target variable from an observational joint distribution. Learning directed acyclic graphs (DAGs) that represent the causal structure is a fundamental problem in science. Several results are known when the full DAG is identifiable from the distribution, such as assuming a nonlinear Gaussian data-generating process. Often, we are only interested in identifying the direct causes of one target variable (local causal structure), not the full DAG. In this paper, we discuss different assumptions for the data-generating process of the target variable under which the set of direct causes is identifiable from the distribution. While doing so, we put essentially no assumptions on the variables other than the target variable. In addition to the novel identifiability results, we provide two practical algorithms for estimating the direct causes from a finite random sample and show their effectiveness on several benchmark data-sets. We apply this framework to learn direct causes of the reduction in the fertility rate in different countries.  
 </div>
+[[code]](https://github.com/jurobodik/Structural-restrictions-in-local-causal-discovery)
 <br>
 
-1. J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) (2023)
+1. J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) (2023, preprint)
 <br>
-[Identifiability of causal graphs under nonadditive conditionally parametric causal models](https://arxiv.org/abs/2303.15376) 
+[Identifiability of causal graphs under nonadditive conditionally parametric causal models](https://arxiv.org/abs/2303.15376)
 <br>
 <button id="toggleButton4" class="custom-button">&#9654; **Abstract**: Causal discovery from observational data is a very challenging, often impossible...</button>
 <div id="longText4" style="display: none;">
 **Abstract**:  Causal discovery from observational data is a very challenging, often impossible, task. However, estimating the causal structure is possible under certain assumptions on the data-generating process. Many commonly used methods rely on the additivity of the noise in the structural equation models. Additivity implies that the variance or the tail of the effect, given the causes, is invariant; the cause only affects the mean. However, the tail or other characteristics of the random variable can provide different information about the causal structure. Such cases have received only very little attention in the literature.
 It has been shown that the causal graph is identifiable under different models, such as linear non-Gaussian, post-nonlinear, or quadratic variance functional models. We introduce a new class of models called the Conditional Parametric Causal Models (CPCM), where the cause affects the effect in some of the characteristics of interest. We use sufficient statistics to show the identifiability of the CPCM models in the exponential family of conditional distributions. We also propose an algorithm for estimating the causal structure from a random sample under CPCM. Its empirical properties are studied for various data sets, including an application on the expenditure behavior of residents of the Philippines.
 </div>
+[[code]](https://github.com/jurobodik/Causal_CPCM)
 <br>
 
-
-
-1. J. Bodik,  [L. Mhalla](https://lindamhalla.netlify.app/),  [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/)  (2022)
-<br>[Detecting causal covariates for extreme dependence structures](https://arxiv.org/abs/2212.09831)
-<br>
-<button id="toggleButton3" class="custom-button">&#9654; **Abstract**: Determining the causes of extreme events is a fundamental question...</button>
-<div id="longText3" style="display: none;">
-**Abstract**:    Determining the causes of extreme events is a fundamental question in many scientific fields. An important aspect when modelling multivariate extremes is the tail dependence. In application, the extreme dependence structure may significantly depend on covariates. As for the general case of modelling including covariates, only some of the covariates are causal. In this paper, we propose a methodology to discover the causal covariates explaining the tail dependence structure between two variables. The proposed methodology for discovering causal variables is based on comparing observations from different environments or perturbations. It is a desired methodology for predicting extremal behaviour in a new, unobserved environment. The methodology is applied to a dataset of NO2 concentration in the UK. Extreme NO2 levels can cause severe health problems, and understanding the behaviour of concurrent severe levels is an important question. We focus on revealing causal predictors for the dependence between extreme NO2 observations at different sites.
-</div>
-<br>
-
-1. J. Bodik, [Z. Pawlas](http://www.karlin.mff.cuni.cz/~pawlas/), [M. Paluš](http://www.cs.cas.cz/mp/) (2022)
-<br>[Causality in extremes of time series](https://arxiv.org/abs/2112.10858). 
+1. J. Bodik, [Z. Pawlas](http://www.karlin.mff.cuni.cz/~pawlas/), [M. Paluš](http://www.cs.cas.cz/mp/) (2023, Extremes)
+<br>[Causality in extremes of time series](https://link.springer.com/article/10.1007/s10687-023-00479-5). 
 <br>
 <button id="toggleButton2" class="custom-button">&#9654; **Abstract**: Consider two stationary time series with heavy-tailed marginal...</button>
 <div id="longText2" style="display: none;">
 **Abstract**:     Consider two stationary time series with heavy-tailed marginal distributions. We aim to detect whether they have a causal relation, that is, if a change in one of them causes a change in the other. Usual methods for causality detection are not well suited if the causal mechanisms only manifest themselves in extremes. This paper aims to detect the causal relations in extremes between time series. We define the so-called causal tail coefficient for time series, which, under some assumptions, correctly detects the asymmetrical causal relations between extremes of the time series. The advantage is that this method works even if nonlinear relations and common ancestors are present. Moreover, we mention how our method can help detect a time delay between the two time series. We describe some of its asymptotic properties and show how it performs on some simulations. Finally, we show how this method works on space-weather and hydro-meteorological data sets.
 </div>
+[[code]](https://github.com/jurobodik/Causality-in-extremes-of-time-series)
 <br>
 
-1. J. Bodik, [Z. Pawlas](http://www.karlin.mff.cuni.cz/~pawlas/), [M. Paluš](http://www.cs.cas.cz/mp/)  (2021)
-<br>[Detection of causality in time series using extreme values](https://dspace.cuni.cz/handle/20.500.11956/127250). (Master thesis, won a 10000KC prize in a competition for best master thesis). 
+1. J. Bodik,  [L. Mhalla](https://lindamhalla.netlify.app/),  [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/)  (2022, preprint)
+<br>[Detecting causal covariates for extreme dependence structures](https://arxiv.org/abs/2212.09831) 
+<br>
+<button id="toggleButton3" class="custom-button">&#9654; **Abstract**: Determining the causes of extreme events is a fundamental question...</button>
+<div id="longText3" style="display: none;">
+**Abstract**:    Determining the causes of extreme events is a fundamental question in many scientific fields. An important aspect when modelling multivariate extremes is the tail dependence. In application, the extreme dependence structure may significantly depend on covariates. As for the general case of modelling including covariates, only some of the covariates are causal. In this paper, we propose a methodology to discover the causal covariates explaining the tail dependence structure between two variables. The proposed methodology for discovering causal variables is based on comparing observations from different environments or perturbations. It is a desired methodology for predicting extremal behaviour in a new, unobserved environment. The methodology is applied to a dataset of NO2 concentration in the UK. Extreme NO2 levels can cause severe health problems, and understanding the behaviour of concurrent severe levels is an important question. We focus on revealing causal predictors for the dependence between extreme NO2 observations at different sites.
+</div>
+[[code]](https://github.com/jurobodik/Detecting-causal-covariates-for-extreme-dependence-structures)
+<br>
+
+
+1. J. Bodik, [Z. Pawlas](http://www.karlin.mff.cuni.cz/~pawlas/), [M. Paluš](http://www.cs.cas.cz/mp/)  (2021, Master thesis, won a 10000KC prize in a competition for best master thesis)
+<br>[Detection of causality in time series using extreme values](https://dspace.cuni.cz/handle/20.500.11956/127250). 
 <br>
 <button id="toggleButton" class="custom-button">&#9654; **Abstract**: In this thesis we deal with the following problem: Let us...</button>
 <div id="longText" style="display: none;">
@@ -58,11 +61,11 @@ It has been shown that the causal graph is identifiable under different models, 
 
 <font size="12">Selected conferences and talks</font>
 
+- [CMStatistics](http://www.cmstatistics.org/RegistrationsV2/CMStatistics2023/viewSubmission.php?in=1622&token=5n52944n1q1s4ors43p00q01637511s5) (Presented in HTW **Berlin**, Germany, 15.12.2023-19.12.2023) 
 
+- [CUSO PhD day](https://statistique.cuso.ch/?id=2688&tx_displaycontroller[showUid]=6526) (Presented in UNIGE **Geneva**, Switzerland, 7.6.2023) 
 
-- [CUSO PhD day](https://statistique.cuso.ch/?id=2688&tx_displaycontroller[showUid]=6526) (Presented in **Geneva**, Switzerland, 7.6.2023) 
-
-- [EUROCIM: European causal inference meeting](https://www.eurocim.org/) (Presented in **Oslo**, Norway, 18.4.2023-22.4.2023) 
+- [EUROCIM: European causal inference meeting](https://www.eurocim.org/) (Presented in University of **Oslo**, Norway, 18.4.2023-22.4.2023) 
 
 - [CUSO: statistics and applied probability](https://statistique.cuso.ch/historique-des-ecoles) (Participant in  **Les Diablerets**, Switzerland, 5.2.2023-8.2.2023, 4.9.2022-7.9.2022, 6.2.2022-9.2.2022, 12.9.2021-15.9.2021) 
 
