--- a/about.Rmd
+++ b/about.Rmd
@@ -7,6 +7,23 @@ output:
 
 <font size="12">Publications and Preprints</font>
 
+
+
+1. J. Bodik  (2024, preprint)
+<br>
+[Extreme Treatment Effect: Extrapolating Causal Effects Into Extreme Treatment Domain](https://arxiv.org/abs/2403.11003)
+<button id="toggleButton6" class="custom-button">&#9654; **Abstract**:  The potential outcomes framework serves as a fundamental...</button>
+<div id="longText6" style="display: none;">
+**Abstract**: The potential outcomes framework serves as a fundamental tool for quantifying the causal effects. When the treatment variable (exposure) is continuous, one is typically interested in the estimation of the effect curve (also called the average dose-response function), denoted as mu(t). In this work, we explore the ``extreme causal effect,'' where our focus lies in determining the impact of an extreme level of treatment, potentially beyond the range of observed values--that is, estimating mu(t) for very large t. Our framework is grounded in the field of statistics known as extreme value theory. We establish the foundation for our approach, outlining key assumptions that enable the estimation of the extremal causal effect. Additionally, we present a novel and consistent estimation procedure that utilizes extreme value theory in order to potentially reduce the dimension of the confounders to at most 3. In practical applications, our framework proves valuable when assessing the effects of scenarios such as drug overdoses, extreme river discharges, or extremely high temperatures on a variable of interest 
+</div>
+[[code]](https://github.com/jurobodik/Extremal-Treatment-Effect.git)
+<br>
+
+
+
+
+
+
 1.  J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/)  (2023, preprint)
 <br>
 [Structural restrictions in local causal discovery: identifying direct causes of a target variable](https://arxiv.org/abs/2307.16048) 
@@ -199,10 +216,12 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
       toggleButton6.textContent = "Show Less";
     } else {
       longText6.style.display = "none";   // Hide the text
-      toggleButton6.textContent = "Abstract: ";
+      toggleButton6.textContent = "Abstract: The potential outcomes framework serves as a fundamental...";
     }
   });
 </script>
+
+
 
 
 <script>
@@ -267,6 +286,5 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
     }
   });
 </script>
-
 
 
