--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ output:
   </div>
   <div class="col-md-9">
 
-My nickname is Juro (pronounced like €), and I am a Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne](https://www.unil.ch/hec/en/home.html), Switzerland. I am passionate about mathematical statistics and specialize in the field of causal inference. Through my research and work, I strive to uncover the hidden relationships and causal effects that shape our world.
+My nickname is Juro (pronounced like €), and I am a Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne, Switzerland](https://www.unil.ch/hec/en/home.html). I am passionate about mathematical statistics and specialize in the field of causal inference. Through my research and work, I strive to uncover the hidden relationships and causal effects that shape our world.
 
 Currently, my research emphasis lies in [causal discovery](https://towardsdatascience.com/causal-discovery-6858f9af6dcb#:~:text=Causal%20discovery%20aims%20to%20infer,causal%20model%20that%20describes%20it.), focusing on the identifiability of causal relations from observational data. In some of our recent publications, we also combine causal discovery with [Extreme value theory](https://en.wikipedia.org/wiki/Extreme_value_theory) and [time series analysis](https://en.wikipedia.org/wiki/Granger_causality). 
 
@@ -32,10 +32,9 @@ I was born in Slovakia and did my bachelor's and master's in pure mathematics at
 </div>
 
 
+
 # Latest news
-- **I am planning on spending the next semester in Berkeley in California. If you have some recommendations let me know!** 
+- *I am planning on spending the next semester in Berkeley in California. If you have some recommendations let me know!* 
 
-- New paper about [Granger causality in extremes](http://arxiv.org/abs/2407.09632) is available on arXiv!  
-
-
+- New paper about [Extreme Treatment Effect: Extrapolating Causal Effects Into Extreme Treatment Domain](https://arxiv.org/abs/2403.11003) is available on arXiv!  
 
