--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ output:
   </div>
   <div class="col-md-9">
 
-My nickname is Juro (pronounced like the money '€'), and I am a Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne](https://www.unil.ch/hec/en/home.html), Switzerland. In 2024, I spent half a year as a visiting researcher at [UC Berkeley](https://www.stat.berkeley.edu/~yugroup/index.html), working with [prof. Bin Yu`s group](https://www.stat.berkeley.edu/~yugroup/index.html). I am passionate about mathematical statistics and specialize in the field of causal inference. Through my research and work, I strive to uncover the hidden relationships and causal effects that shape our world.
+My nickname is Juro (pronounced like the money '€'), and I am a Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne](https://www.unil.ch/hec/en/home.html), Switzerland. In 2024, I spent half a year as a visiting researcher at [UC Berkeley](https://www.stat.berkeley.edu/~yugroup/index.html), working with [prof. Bin Yu](https://www.stat.berkeley.edu/~yugroup/index.html). I am passionate about mathematical statistics and specialize in the field of causal inference. Through my research and work, I strive to uncover the hidden relationships and causal effects that shape our world.
 
 Currently, my research emphasis lies in [causal inference and causal discovery](https://arxiv.org/abs/2407.09632), focusing on the identifiability of causal relations from observational data. In some of our recent publications, we also combine causal inference with [Extreme value theory](https://en.wikipedia.org/wiki/Extreme_value_theory) and [time series analysis](https://en.wikipedia.org/wiki/Granger_causality). 
 
