--- a/index.Rmd
+++ b/index.Rmd
@@ -34,5 +34,5 @@ I was born in Slovakia and did my bachelor's and master's in pure mathematics at
 
 # Latest news
 - Our paper was recently published in [Biometrika](https://academic.oup.com/biomet/advance-article/doi/10.1093/biomet/asaf042/8157876), one of the top 5 journals in statistics.
-- In August and September, I’ll be doing a research visit at the University of Osaka, hosted by [Shohei Shimizu](https://www.shimizulab.org/lab). If you have recommendations for Japan or would like to meet up while I’m there, feel free to reach out!
+- In August and September, I’ll be doing a research visit at the University of Osaka in Japan, hosted by [Shohei Shimizu](https://www.shimizulab.org/lab). If you have recommendations for Japan or would like to meet up while I’m there, feel free to reach out!
 
