--- a/about.Rmd
+++ b/about.Rmd
@@ -7,7 +7,32 @@ output:
 
 <font size="12">Publications and Preprints</font>
 
-1.  J. Bodik and [O. Pasche](https://www.unige.ch/gsem/en/research/institutes/risis/team/phd/olivier-pasche/)  (2024, preprint, submitted to JASA)
+
+1.  J. Bodik, [Yaxuan Huang](https://imyaxuan.github.io/) and [Bin Yu](https://www.stat.berkeley.edu/~yugroup/)  (2025, preprint, submitted to JRSSb)
+<br>
+[Cross-World Assumption and Refining Prediction Intervals for Individual Treatment Effects](https://arxiv.org/abs/2507.?????) <br>
+<button id="toggleButton9" class="custom-button">&#9654; **Abstract**: While average treatment effects (ATE) and conditional average...</button>
+<div id="longText9" style="display: none;">
+**Abstract**: While average treatment effects (ATE) and conditional average treatment effects (CATE) provide valuable population- and subgroup-level summaries, they fail to capture uncertainty at the individual level. For high-stakes decision-making, individual treatment effect (ITE) estimates must be accompanied by valid prediction intervals that reflect heterogeneity and unit-specific uncertainty. However, the fundamental unidentifiability of ITEs limits the ability to derive precise and reliable individual-level uncertainty estimates. To address this challenge, we investigate the role of a cross-world correlation parameter, \( \rho(x) = \text{cor}\big(Y(1), Y(0) \mid X = x\big) \), which describes the dependence between potential outcomes, given covariates, in the Neyman-Rubin super-population model with i.i.d. units.  Although \( \rho \) is fundamentally unidentifiable, we argue that in most real-world applications, it is possible to impose reasonable and interpretable bounds informed by domain-expert knowledge. Given $\rho$, we design prediction intervals for ITE, achieving more stable and accurate coverage with substantially shorter widths; often less than 1/3 of those from competing methods. The resulting intervals satisfy coverage guarantees $P\big(Y(1) - Y(0) \in C_{ITE}(X)\big) \geq 1 - \alpha$ and are asymptotically optimal under Gaussian assumptions. We provide strong theoretical and empirical arguments that cross-world assumptions can make individual uncertainty quantification both practically informative and statistically valid.
+</div>
+[[code]](https://github.com/jurobodik/ITE_prediction_cross_world.git)
+<br>
+
+
+
+1. [I. Azizi<sup>✶</sup>](https://iliaazizi.com/), J. Bodik<sup>✶</sup>, [J. Heiss<sup>✶</sup>](https://scholar.google.com/citations?user=mKqte6AAAAAJ&hl=de), and [Bin Yu](https://www.stat.berkeley.edu/~yugroup/) (2025, preprint, submitted to NeurIPS)  
+<em><sup>✶</sup>Equal contribution</em>  
+[CLEAR: Calibrated Learning for Epistemic and Aleatoric Risk](https://arxiv.org/abs/2507.08150) <br>
+<button id="toggleButton8" class="custom-button">&#9654; **Abstract**: Accurate uncertainty quantification is critical for reliable...</button>
+<div id="longText8" style="display: none;">
+**Abstract**: Accurate uncertainty quantification is critical for reliable predictive modeling, especially in regression tasks. Existing methods typically address either aleatoric uncertainty from measurement noise or epistemic uncertainty from limited data, but not necessarily both in a balanced way. We propose CLEAR, a calibration method with two distinct parameters,  and , to combine the two uncertainty components for improved conditional coverage. CLEAR is compatible with any pair of aleatoric and epistemic estimators; we show how it can be used with (i) quantile regression for aleatoric uncertainty and (ii) ensembles drawn from the Predictability-Computability-Stability (PCS) framework for epistemic uncertainty. Across 17 diverse real-world datasets, CLEAR achieves an average improvement of 28.2% and 17.4% in the interval width compared to the two individually calibrated baselines while maintaining nominal coverage. This improvement can be particularly evident in scenarios dominated by either high epistemic or high aleatoric uncertainty.
+</div>
+[[code]](https://github.com/Unco3892/clear)
+
+
+
+
+1.  J. Bodik and [O. Pasche](https://www.unige.ch/gsem/en/research/institutes/risis/team/phd/olivier-pasche/)  (2024, preprint, submitted to JRSSb)
 <br>
 [Granger causality in extremes](https://arxiv.org/abs/2407.09632) <br>
 <button id="toggleButton7" class="custom-button">&#9654; **Abstract**: We introduce a rigorous mathematical framework for Granger causality...</button>
@@ -261,7 +286,7 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
       toggleButton8.textContent = "Show Less";
     } else {
       longText8.style.display = "none";   // Hide the text
-      toggleButton8.textContent = "Abstract: ";
+      toggleButton8.textContent = "Abstract: Accurate uncertainty quantification is critical for reliable...";
     }
   });
 </script>
@@ -277,7 +302,7 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
       toggleButton9.textContent = "Show Less";
     } else {
       longText9.style.display = "none";   // Hide the text
-      toggleButton9.textContent = "Abstract: ";
+      toggleButton9.textContent = "Abstract: While average treatment effects (ATE) and conditional average...";
     }
   });
 </script>
@@ -297,6 +322,5 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
     }
   });
 </script>
-
 
 
