--- a/about.Rmd
+++ b/about.Rmd
@@ -104,6 +104,13 @@ It has been shown that the causal graph is identifiable under different models, 
 </div>
 <br>
 
+<font size="12">Reviewing</font>
+<br>
+<a href="https://academic.oup.com/jrsssb">Journal of the Royal Statistical Society, Series B (JRSSB)</a>, 
+<a href="https://www.sciencedirect.com/journal/statistics-and-probability-letters">Statistics &amp; Probability Letters</a>, 
+<a href="https://www.springer.com/journal/41237">Behaviormetrika</a>, 
+<span class="muted"><a href="https://revstat.ine.pt/">REVSTAT - Statistical Journal</a></span>
+
 <font size="12">Selected conferences and talks</font>
 
 - [Data driven seminar](https://datascience.stanford.edu/datadrivenseminar) (Speaker at a weekly Data driven seminar at  **Stanford**, California, 7.11.2024)
@@ -322,5 +329,6 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
     }
   });
 </script>
+
 
 
